data/derived/fa15/progs/unify/prog4010.ml.out
Characters 148-164:
  |x::y -> (mulByDigit i ((i * x + h)/10)::y)@(((i * x + h) % 10)::[]);;
                         ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
